update css for the result box. Fix UX/UI on mobile

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html {
   -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 * {
@@ -12,7 +12,7 @@ html {
 *:before,
 *:after {
   -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 input,
@@ -39,7 +39,6 @@ input[type="week"],
 select:focus,
 textarea {
   font-size: 16px;
-  /* Remove First */
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -102,11 +101,11 @@ html {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 100%;
   height: 100%;
   background-color: #f7f7f9;
@@ -123,15 +122,15 @@ html {
   max-width: 1100px;
   background-color: #fff;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   border-radius: 25px;
 }
 
@@ -144,8 +143,8 @@ html {
   text-transform: uppercase;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   width: 100%;
   height: 60%;
   -webkit-transition: all 0.3s ease-in-out;
@@ -189,8 +188,8 @@ html {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: end;
-  -ms-flex-pack: end;
-  justify-content: flex-end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
   width: 100%;
   margin-bottom: 1rem;
 }
@@ -218,12 +217,12 @@ html {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: stretch;
-  -ms-flex-align: stretch;
-  align-items: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   width: 100%;
   margin-top: 1rem;
   overflow: auto;
@@ -274,7 +273,7 @@ html {
   opacity: 0;
   visibility: hidden;
   -webkit-transform: translateX(-50%);
-  transform: translateX(-50%);
+          transform: translateX(-50%);
 }
 
 .container .notification span {
@@ -282,15 +281,15 @@ html {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .container .notification span .fa-clone {
@@ -318,6 +317,72 @@ html {
   }
   .container .box {
     height: 100%;
+  }
+  .results {
+    opacity: 0;
+    visibility: hidden;
+    position: fixed;
+    background: #fff;
+    max-height: 100% !important;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    padding: 5.5rem 1rem;
+  }
+  .results.active {
+    opacity: 1;
+    visibility: visible;
+  }
+  .results.active + .results-header {
+    opacity: 1;
+    visibility: visible;
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+  .results-header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    padding: 1rem 0;
+    background: #fff;
+    height: 80px;
+    border-radius: 0 0 20px 20px;
+    -webkit-box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+            box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    opacity: 0;
+    visibility: hidden;
+    -webkit-transform: translateY(-100px);
+            transform: translateY(-100px);
+  }
+  .results-header .btn-close {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    height: 50px;
+    width: 50px;
+    position: fixed;
+    top: 1rem;
+    right: 1rem;
+    z-index: 3;
+    font-size: 2rem;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    border-radius: 50%;
+    background: #eee;
+    color: #777;
+    cursor: pointer;
+  }
+  .results-header .btn-close:hover {
+    background: #ddd;
+    color: #333;
+    -webkit-transform: rotate(180deg);
+            transform: rotate(180deg);
   }
 }
 /*# sourceMappingURL=style.css.map */
